# GBA-C--Game

./: .bazelrc  .clang-format  .clangd  .gitattributes  .gitignore  MODULE.bazel  Makefile  README.md  build.bash  gen_clangd.sh
bazel/: BUILD.bazel  copts.bzl
platform/: devkitarm.bazel  repo.bzl
platform/tarballs/: BUILD.bazel
src/: BUILD.bazel  main.c  main.cpp
tools/clangd/: clangd  gen_clang_tidy.sh  gen_clangd.sh
tools/mgba/: BUILD.bazel
