load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(
    default_visibility = ["//visibility:public"],
)

bool_flag(
    name = "strict",
    build_setting_default = True,
)

config_setting(
    name = "strict_true",
    flag_values = {
        "//bazel:strict": "true",
    },
)

config_setting(
    name = "strict_false",
    flag_values = {
        "//bazel:strict": "false",
    },
)
